Add accordion-style collapsible content functionality
Implemented JS and CSS to allow recipes to expand and collapse. Only one section can be open at a time.

--- a/index.html
+++ b/index.html
@@ -24,90 +24,175 @@
 
     <button class="name">Boeuf bourguignon</button>
     <div class="recipe">
-        <!-- recipe -->
+        <ul class="ingredients">
+            <li></li>
+        </ul>
+        <ol class="instructions">
+            <li></li>
+        </ol>
     </div>
 
     <button class="name">Chili oil beef noodles</button>
     <div class="recipe">
-        <!-- recipe -->
+        <ul class="ingredients">
+            <li></li>
+        </ul>
+        <ol class="instructions">
+            <li></li>
+        </ol>
     </div>
 
     <button class="name">Croque-monsieur</button>
     <div class="recipe">
-        <!-- recipe -->
+        <ul class="ingredients">
+            <li></li>
+        </ul>
+        <ol class="instructions">
+            <li></li>
+        </ol>
     </div>
 
     <button class="name">Coq au vin</button>
     <div class="recipe">
-        <!-- recipe -->
+        <ul class="ingredients">
+            <li></li>
+        </ul>
+        <ol class="instructions">
+            <li></li>
+        </ol>
     </div>
 
     <button class="name">Quiche</button>
     <div class="recipe">
-        <!-- recipe -->
+        <ul class="ingredients">
+            <li></li>
+        </ul>
+        <ol class="instructions">
+            <li></li>
+        </ol>
     </div>
 
     <button class="name">Roasted pork loin</button>
     <div class="recipe">
-        <!-- recipe -->
+        <ul class="ingredients">
+            <li></li>
+        </ul>
+        <ol class="instructions">
+            <li></li>
+        </ol>
     </div>
 
     <button class="name">Shepherd's pie</button>
     <div class="recipe">
-        <!-- recipe -->
+        <ul class="ingredients">
+            <li></li>
+        </ul>
+        <ol class="instructions">
+            <li></li>
+        </ol>
     </div>
 
     <h2 id="sides">Sides</h2>
 
     <button class="name">Beans and bacon</button>
     <div class="recipe">
-        <!-- recipe -->
-    </div>    
+        <ul class="ingredients">
+            <li></li>
+        </ul>
+        <ol class="instructions">
+            <li></li>
+        </ol>
+    </div>
 
     <button class="name">Cauliflower gratin</button>
     <div class="recipe">
-        <!-- recipe -->
+        <ul class="ingredients">
+            <li></li>
+        </ul>
+        <ol class="instructions">
+            <li></li>
+        </ol>
     </div>
 
     <button class="name">Ratatouille</button>
     <div class="recipe">
-        <!-- recipe -->
-    </div>    
+        <ul class="ingredients">
+            <li></li>
+        </ul>
+        <ol class="instructions">
+            <li></li>
+        </ol>
+    </div>
 
     <h2 id="baking">Baking</h2>
 
     <button class="name">Almond and chocolate ciambella</button>
     <div class="recipe">
-        <!-- recipe -->
-    </div>    
+        <ul class="ingredients">
+            <li></li>
+        </ul>
+        <ol class="instructions">
+            <li></li>
+        </ol>
+    </div>
 
     <button class="name">Gentle chocolate chip cookies</button>
     <div class="recipe">
-        <!-- recipe -->
-    </div>    
+        <ul class="ingredients">
+            <li></li>
+        </ul>
+        <ol class="instructions">
+            <li></li>
+        </ol>
+    </div>
 
     <button class="name">Focaccia</button>
     <div class="recipe">
-        <!-- recipe -->
-    </div>   
+        <ul class="ingredients">
+            <li></li>
+        </ul>
+        <ol class="instructions">
+            <li></li>
+        </ol>
+    </div>
 
     <button class="name">Pasta frolla</button>
     <div class="recipe">
-        <!-- recipe -->
+        <ul class="ingredients">
+            <li></li>
+        </ul>
+        <ol class="instructions">
+            <li></li>
+        </ol>
     </div>
 
     <h2 id="drinks">Drinks</h2>
 
     <button class="name">The Dream Drink</button>
-        <div class="recipe">
-        <!-- recipe -->
+    <div class="recipe">
+        <ul class="ingredients">
+            <li></li>
+        </ul>
+        <ol class="instructions">
+            <li></li>
+        </ol>
     </div>
 
     <button class="name">Lemonade</button>
-        <div class="recipe">
-        <!-- recipe -->
+    <div class="recipe">
+        <ul class="ingredients">
+            <li>1/4 cup lemon juice, sugar, water (each)</li>
+            <li>2 more cups water</li>
+            <li>6 ice cubes</li>
+        </ul>
+        <ol class="instructions">
+            <li>Heat up water, sugar, lemon juice until sugar dissolves</li>
+            <li>Add the ice</li>
+            <li>Let sit in fridge for 2+ hours</li>
+        </ol>
     </div>
 
+    <script src="script.js"></script>
 </body>
 
 </html>
