Add some recipes and a page for dinner spreads

--- a/index.html
+++ b/index.html
@@ -9,56 +9,102 @@
 </head>
 
 <body>
-    <ul class="navbar">
+    <ul class="navbar" id="home">
         <li><a href="#home">Home</a></li>
         <li><a href="#mains">Main Courses</a></li>
         <li><a href="#sides">Sides</a></li>
         <li><a href="#baking">Baking</a></li>
         <li><a href="#drinks">Drinks</a></li>
         <li class="right"><a href="glist.html">Grocery List</a></li>
+        <li class="right"><a href="dinners.html">Dinners</a></li>
     </ul>
-    <h1 id="home">The Nash Online Food Sheet</h1>
+    <h1>The Nash Online Food Sheet</h1>
     <p>Eat well and be well, my family, my heart.</p>
 
     <h2 id="mains">Main Courses</h2>
 
-    <button class="name">Boeuf bourguignon</button>
+    <button class="name">Boeuf bourguignon ("quick")</button>
     <div class="recipe">
         <ul class="ingredients">
-            <li></li>
+            <li>1 lbs stew beef, cubed</li>
+            <li>4 small onions, diced</li>
+            <li>4 carrots, chopped</li>
+            <li>1 small bottle of red wine</li>
+            <li>1 stick of butter</li>
+            <li>Salt</li>
+            <li>Pepper</li>
+            <li>Bouquet garni</li>
         </ul>
         <ol class="instructions">
-            <li></li>
+            <li>In a dutch oven, brown the beef in butter (be generous), then set aside</li>
+            <li>In the same pot, add some more butter and cook the onion</li>
+            <li>Deglaze the pot with the wine, then add the beef, carrots, bouquet garni, and season</li>
+            <li>Let stew for at least 2 hours</li>
         </ol>
     </div>
 
     <button class="name">Chili oil beef noodles</button>
     <div class="recipe">
         <ul class="ingredients">
-            <li></li>
+            <li>1 lb ground beef</li>
+            <li>salt</li>
+            <li>2 cloves of garlic</li>
+            <li>chili powder</li>
+            <li>45g chili crisp oil</li>
+            <li>30g soy sauce</li>
+            <li>30g peanut butter</li>
+            <li>5g sesame oil</li>
+            <li>1/2 lime worth of juice</li>
+            <li>4 servings of noodles</li>
+            <li>scallions</li>
         </ul>
         <ol class="instructions">
-            <li></li>
+            <li>Make the sauce using the chili crisp oil, soy sauce, peanut butter, sesame oil, and lime. Store in fridge until ready to use</li>
+            <li>Boil the noodles according to package directions</li>
+            <li>Cook the beef with garlic, salt, and chili powder to taste.</li>
+            <li>Assemble and serve with some green vegetable like asparagus, broccoli, or green beans</li>
         </ol>
     </div>
 
-    <button class="name">Croque-monsieur</button>
+    <button class="name matt">Club King Sandwich</button>
     <div class="recipe">
         <ul class="ingredients">
-            <li></li>
+            <li>2 slices wheat bread</li>
+            <li>1/5 lb turkey (roasted or black pepper) or 2 slices folded</li>
+            <li>1/5 lb ham (anything but sweet) or 2 slices folded</li>
+            <li>2 slice bacon</li>
+            <li>1 TBSP mayonnaise</li>
+            <li>1 lettuce leaf</li>
+            <li>1 layer of tomato</li>
         </ul>
         <ol class="instructions">
-            <li></li>
+            <li>Assemble the sandwich</li>
         </ol>
     </div>
 
     <button class="name">Coq au vin</button>
     <div class="recipe">
         <ul class="ingredients">
-            <li></li>
+            <li>1 chicken's worth of poultry meat, cut into pieces</li>
+            <li>1 large onion, chopped</li>
+            <li>2 carrots, chopped</li>
+            <li>1 small bottle of red wine</li>
+            <li>1 Tbsp flour</li>
+            <li>2 cloves of garlic, crushed</li>
+            <li>1 bouillon cube (beef)</li>
+            <li>Bouqet garni</li>
+            <li>Salt</li>
+            <li>Pepper</li>
+            <li>1/2lbs mushrooms (optional)</li>
         </ul>
         <ol class="instructions">
-            <li></li>
+            <li>Marinade the poultry with the wine, onions, carrots, bouquet garni, and a few whole peppercorns, preferably overnight. Do not discard the marinade</li>
+            <li>Brown the chicken in a dutch oven with some oil, then set aside</li>
+            <li>Add the carrots and onions and cook them on low heat. Coat the vegetables with flour</li>
+            <li>Add the poultry into the pot. Add the garlic.</li>
+            <li>Add the marinade into the pot. Add water until the meat is mostly covered. Add the bouillon cube.</li>
+            <li>Season with salt and pepper, then let simmer for about 2h30mins.</li>
+            <li>If you are adding mushrooms, add them during the last 5-10 minutes of cooking. Adjust the seasoning.</li>
         </ol>
     </div>
 
@@ -90,6 +136,33 @@
         <ol class="instructions">
             <li></li>
         </ol>
+    </div>
+
+    <button class="name matt" id="tspb">Those Sweet Pork Burgers</button>
+    <div class="recipe">
+        <ul class="ingredients">
+            <li>2/3 lbs ground pork</li>
+            <li>1/8 tsp fresh minced garlic</li>
+            <li>1/8 tsp fresh minced ginger</li>
+            <li>10 cracks of salt</li>
+            <li>14 cracks of pepper</li>
+            <li>Whole wheat burger buns</li>
+            <li>2 tomatoes</li>
+            <li>1/3 cup honey</li>
+            <li>2 Tbsp + 2 tsp soy sauce</li>
+            <li>5 tsp corn starch slurry</li>
+        </ul>
+        <ol class="instructions">
+            <li>Start by making the sauce by liquifying tomatoes in a blender.</li>
+            <li>Simmer the liquid tomato until you are left with 1 cup of tomato. The consistency should be slightly less liquid.</li>
+            <li>Add the honey and soy sauce. Mix to combine.</li>
+            <li>Add the corn starch slurry and simmer until thicken. Then let cool to thicken further.</li>
+            <li>Now start on the burgers.Season the pork with salt, pepper, minced garlic, and ginger.</li>
+            <li>Shape the burgers and cook in oil.</li>
+            <li>Set aside most of the oil, then lightly toast the insides of the buns in the pan.</li>
+            <li>Add some sauce on both the top and bottom bun, layer the patty, drizzle more sauce on the patty.</li>
+        </ol>
+        <p>Note: ratio for the sauce is 6:2:1 tomato, honey, soy</p>
     </div>
 
     <h2 id="sides">Sides</h2>
@@ -178,7 +251,7 @@
         </ol>
     </div>
 
-    <button class="name">Lemonade</button>
+    <button class="name matt">Matt's Lemonade</button>
     <div class="recipe">
         <ul class="ingredients">
             <li>1/4 cup lemon juice, sugar, water (each)</li>
