Fill all the recipe content and add some spreads

--- a/dinners.html
+++ b/dinners.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dinner Spreads</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <ul class="navbar" id="home">
-        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html">Recipes</a></li>
         <li class="right"><a href="glist.html">Grocery List</a></li>
         <li class="right"><a href="dinners.html">Dinners</a></li>
-    </ul>    
+    </ul>
     <h1>Dinner Spreads</h1>
+    <p>Each spread serves 4 unless otherwise marked</p>
     <div class="spread">
         <h2>Chinese-American Burgers</h2>
         <h3><a href="index.html#tspb">Those Sweet Pork Burgers</a></h3>
@@ -41,5 +44,24 @@
         </ul>
         <p>Blanch then simmer. Then strain. Add a few teaspoons of peanut oil. Salt and pepper</p>
     </div>
+
+    <div class="spread">
+        <h2>Mediterranean Asian Spread</h2>
+        <h3><a href="index.html#eggplantzucc">Sweet and Spicy Eggplant Zucchini in Red Sauce</a></h3>
+        <h3><a href="index.html#eggdrop">Matt's Simple Eggdrop Soup</a></h3>
+        <h3><a href="index.html#chickenparm">Chicken in parmesan sauce</a></h3>
+        <h3>Salad</h3>
+        <ul>
+            <li>Arugula</li>
+            <li>Cherry tomatoes or jarred artichokes</li>
+        </ul>
+    </div>
+    
+    <div class="spread">
+        <h2>American Hot Pot</h2>
+        <h3><a href="index.html#spicyhotpot">Spicy American Hot Pot</a></h3>
+        <p>Serve with steamed sweet potato, sourdough bread, and sweet Italian sausage</p>
+    </div>
 </body>
+
 </html>
