--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <ul class="navbar" id="home">
-        <li><a href="#home">Home</a></li>
+        <li><a href="#home">Recipes</a></li>
         <li><a href="#mains">Main Courses</a></li>
         <li><a href="#sides">Sides</a></li>
         <li><a href="#baking">Baking</a></li>
@@ -108,7 +108,7 @@
         </ol>
     </div>
 
-    <button class="name">Quiche</button>
+    <!-- <button class="name">Quiche</button>
     <div class="recipe">
         <ul class="ingredients">
             <li></li>
@@ -116,9 +116,9 @@
         <ol class="instructions">
             <li></li>
         </ol>
-    </div>
+    </div> -->
 
-    <button class="name">Roasted pork loin</button>
+    <!-- <button class="name">Roasted pork loin</button>
     <div class="recipe">
         <ul class="ingredients">
             <li></li>
@@ -126,15 +126,39 @@
         <ol class="instructions">
             <li></li>
         </ol>
-    </div>
+    </div> -->
 
     <button class="name">Shepherd's pie</button>
     <div class="recipe">
         <ul class="ingredients">
-            <li></li>
+            <li>2 Tbsp oil</li>
+            <li>1 cup onion, chopped</li>
+            <li>1 lb ground meat (beef or lamb)</li>
+            <li>2 tsp dried parsley</li>
+            <li>1 tsp dried rosemary</li>
+            <li>1 tsp dried thyme</li>
+            <li>1/2 tsp salt</li>
+            <li>1/2 tsp ground black pepper</li>
+            <li>1 Tbsp Worcestershire sauce</li>
+            <li>2 garlic cloves, minced</li>
+            <li>2 Tbsp flour</li>
+            <li>2 Tbsp tomato paste</li>
+            <li>1 cup beef broth</li>
+            <li>1/2 cup diced carrots</li>
+            <li>1/2 cup peas</li>
+            <li>1/2 cup corn</li>
+            <li>2 large potatoes worth of mashed potatoes</li>
         </ul>
         <ol class="instructions">
-            <li></li>
+            <li>Cook the onions in the oil for about 5 minutes</li>
+            <li>Add the ground meat, herbs, and seasoning. Cook until the meat is browned</li>
+            <li>Add the Worcerstershire sauce and garlic. Cook for 1 minute</li>
+            <li>And the flour and tomato paste. Stir until no more clumps remain</li>
+            <li>Add the broth, peas, carrots, and corn. Bring to a boil then simmer for 5 minutes, stirring occasionally</li>
+            <li>Preheat oven to 400 degrees while preparing the mash to preference</li>
+            <li>Assemble the casserole in a 9x9 or 7x11 baking dish</li>
+            <li>Place baking dish on a rimmed baking sheet to prevent accidents. Bake for 25-30min</li>
+            <li>Let cool for 15 minutes before serving</li>
         </ol>
     </div>
 
@@ -165,19 +189,72 @@
         <p>Note: ratio for the sauce is 6:2:1 tomato, honey, soy</p>
     </div>
 
+    <button class="name matt" id="chickenparm">Chicken in Parmesan Sauce</button>
+    <div class="recipe">
+        <ul class="ingredients">
+            <li>24oz chicken breast, whole. Pounded until even in thickness</li>
+            <li>1 slice of ginger</li>
+            <li>1 clove of garlic, crushed</li>
+            <li>1 cup water</li>
+            <li>1 tsp chicken bouillon</li>
+            <li>1/4 cup grated parmesan</li>
+            <li>1 tsp garlic, minced</li>
+            <li>2 Tbsp flour</li>
+            <li>4 Tbsp oil or butter</li>
+        </ul>
+        <ol class="instructions">
+            <li>Start by poaching the chicken breast. To do this, bring a pot of water to a boil with the ginger and crushed garlic</li>
+            <li>Once boiling, add the chicken breast to the pot. Wait until the water comes back to a boil, then immediately reduce the heat and let simmer softly for 3-5 minutes</li>
+            <li>Turn of the heat and let stand for 10-15 minutes until the chicken is cooked</li>
+            <li>To make the gravy, start by making the broth with the cup of water and bouillon</li>
+            <li>In a small pan, add the oil or butter and minced garlic. Fry for a few seconds</li>
+            <li>Add the flour and mix to make the roux. Cook for 1-2 minutes until it bubbles and smells slightly nutty</li>
+            <li>Very slowly, whisk in the broth, making sure it is fully incorporated at each addition to avoid lumps</li>
+            <li>Keep stirring and simmering until it reaches your desired thickness</li>
+            <li>Take it off the heat and stir in the parmesan, and season</li>
+        </ol>
+    </div>
+
+    <button class="name matt" id="spicyhotpot">Spicy American Hot Pot</button>
+    <div class="recipe">
+        <ul class="ingredients">
+            <li>20-40 green beans (4 small servings), trimmed and cut</li>
+            <li>1 + 1/2 green bell pepper, sliced</li>
+            <li>3 white mushrooms, sliced</li>
+            <li>1 Chayotte Squash, cubed</li>
+            <li>8oz Beef (ribeye or top/bottom round), thinly sliced</li>
+            <li>1/2 Tbsp + a little bit more Chili crisp oil</li>
+            <li>1/4 Tbsp garlic, minced</li>
+            <li>1 slice of garlic</li>
+            <li>8 tsp beef bouillon</li>
+            <li>8 cups of water</li>
+            <li>Fresh basil</li>
+        </ul>
+        <ol class="instructions">
+            <li>Make the soup base with the water, garlic, ginger, beef bouillon, and chili crisp oil. Bring to a strong simmer</li>
+            <li>The green beans need to cook for 15 minutes, bell pepper and mushrooms 5 minutes, and chayotte only 2-3 minutes</li>
+            <li>Add the beef to the serving bowl. Spoon some of the boiling liquid into the bowl and mix to separate the slices. Then fill the bowl with your serving of soup and vegetables and DO NOT STIR for about 5 minutes. Let the heat cook the beef</li>
+        </ol>
+    </div>
+
     <h2 id="sides">Sides</h2>
 
     <button class="name">Beans and bacon</button>
     <div class="recipe">
         <ul class="ingredients">
-            <li></li>
+            <li>1 can of beans (preferably pinto), drained and rinsed</li>
+            <li>About 5 strips of bacon, cut into small pieces</li>
+            <li>1/4 tsp dried rosemary (optional)</li>
         </ul>
         <ol class="instructions">
-            <li></li>
+            <li>Cook the bacon bits in a pan</li>
+            <li>Once the fat is fully rendered, but before the bacon is crisp, add the beans and rosemary if using</li>
+            <li>Arrange in a uniform layer and do not stir. Let the beans crisp up</li>
+            <li>When the skins of the beans are golden and seem to pull away from the beans, it is ready</li>
         </ol>
     </div>
 
-    <button class="name">Cauliflower gratin</button>
+    <!-- <button class="name">Cauliflower gratin</button>
     <div class="recipe">
         <ul class="ingredients">
             <li></li>
@@ -185,15 +262,68 @@
         <ol class="instructions">
             <li></li>
         </ol>
-    </div>
+    </div> -->
 
     <button class="name">Ratatouille</button>
     <div class="recipe">
         <ul class="ingredients">
-            <li></li>
+            <li>1 lb peppers, sliced</li>
+            <li>1 lb onions, sliced</li>
+            <li>1 lb eggplant, sliced</li>
+            <li>1 lb zucchini, sliced</li>
+            <li>1.5lbs tomatoes, quartered</li>
+            <li>3 cloves of garlic, minced</li>
+            <li>1 bunch of thyme</li>
+            <li>1 bay leaf</li>
+            <li>Salt</li>
+            <li>Pepper</li>
+            <li>Olive oil</li>
         </ul>
         <ol class="instructions">
-            <li></li>
+            <li>Add 2 Tbsp of oil to a pan and cook the onions and peppers</li>
+            <li>Once tender, add the tomato, garlic, thyme, and bay leaf. Season with salt and pepper, cover, and let simmer for about 45 minutes</li>
+            <li>Meanwhile, separately cook the eggplant and zucchini until soft (my preferred method is to brush with oil and bake for 400F for about 15 minutes)</li>
+            <li>Add the eggplant and zucchini to the other vegetables, mix and let simmer for 10 minutes</li>
+            <li>Season to taste</li>
+        </ol>
+    </div>
+
+    <button class="name matt" id="eggplantzucc">Sweet and Spicy Eggplant Zucchini in Red Sauce</button>
+    <div class="recipe">
+        <ul class="ingredients">
+            <li>1 eggplant, sliced</li>
+            <li>2 zucchini, sliced</li>
+            <li>2 red bell peppers, chopped</li>
+            <li>1 Tbsp paprika</li>
+            <li>4 Tbsp oil</li>
+            <li>2 Tbsp honey</li>
+            <li>Salt</li>
+            <li>Pepper</li>
+        </ul>
+        <ol class="instructions">
+            <li>Brush the eggplant and zucchini with some oil. Season and bake in the oven at 400F for about 15 minutes until soft</li>
+            <li>Cook the red bell pepper in the 4 Tbsp of oil. Season with paprika, salt, and pepper. Make sure the paprika hits the oil. Cover and cook until soft</li>
+            <li>Add the cooked bell pepper to a blender. Add the honey and blend to make the sauce.</li>
+            <li>Add the eggplant, zucchini, and red sauce to a pan on medium heat. Stir and cook until well combined and thickened to liking</li>
+            <li>Season to taste and serve</li>
+        </ol>
+    </div>
+
+    <button class="name matt" id="eggdrop">Matt's Simple Eggdrop</button>
+    <div class="recipe">
+        <ul class="ingredients">
+            <li>3 oz white mushrooms, quartered?</li>
+            <li>1 egg, whisked</li>
+            <li>10 fl oz water</li>
+            <li>1.5 tsp chicken bouillon</li>
+            <li>1 Tbsp corn starch slurry</li>
+            <li>1/8 tsp garlic, minced (optional)</li>
+        </ul>
+        <ol class="instructions">
+            <li>Make the bouillon and bring to a simmer</li>
+            <li>Add the mushrooms and garlic (if using). Let simmer until desired doneness</li>
+            <li>Add the cornstarch slurry and let cook for 2 minutes</li>
+            <li>Stir the liquid to create a vortex and drizzle in the egg. Do not overmix to create thick ribbons</li>
         </ol>
     </div>
 
@@ -202,46 +332,100 @@
     <button class="name">Almond and chocolate ciambella</button>
     <div class="recipe">
         <ul class="ingredients">
-            <li></li>
+            <li>3 eggs</li>
+            <li>180g sugar</li>
+            <li>130ml milk</li>
+            <li>1 tsp vanilla extract</li>            
+            <li>250g flour</li>
+            <li>pinch of salt</li>
+            <li>50g almond flour</li>           
+            <li>100g butter (soft)</li>  
+            <li>25ml rum (or some other sweet liquor)</li>         
+            <li>1 tsp baking powder</li>
+            <li>50g (chopped) + 100g (chucks or chips) dark chocolate</li>
+            <li>35g almonds</li>
+            <li>Powdered sugar (optional)</li>
+
         </ul>
         <ol class="instructions">
-            <li></li>
+            <li>In a bowl, using an electric mixed whip the eggs and sugar until you get a white-ish foamy mix (can take a while)</li>
+            <li>Add vanilla extract to the milk, and a pinch of salt to the flour</li>
+            <li>Still using the electric mixer, alternate sifting in the flour with the milk</li>
+            <li>Mix in the almond flour</li>
+            <li>Add the butter and rum. Mixed until uniform</li>
+            <li>Fold in the chopped chocolate and baking powder</li>
+            <li>Prepare the ring cake mold (bundt cake in USA?) using your preferred method (butter + flour or parchment paper) and add the batter</li>
+            <li>Sprinkle the chocolate chunks and almonds onto the top of the cake batter</li>
+            <li>Bake at 350F for 30-35 minutes. The cake is ready when a toothpick comes out clean</li>
         </ol>
     </div>
 
     <button class="name">Gentle chocolate chip cookies</button>
     <div class="recipe">
         <ul class="ingredients">
-            <li></li>
+            <li>100g cane or brown sugar</li>
+            <li>90g butter</li>
+            <li>1 pinch of salt</li>
+            <li>1 egg</li>
+            <li>1/2tsp vanilla extract</li>
+            <li>250g flour</li>
+            <li>50g chocolate chips</li>
+            <li>1/2 tsp baking soda</li>
         </ul>
         <ol class="instructions">
-            <li></li>
+            <li>Cream the butter, sugar, add salt with an electric mixer until soft and fluffy</li>
+            <li>Add the egg and vanilla. Mix until uniform</li>
+            <li>Add the flour, chocolate chips, and baking soda. Mix until a dough is formed and no bits of flour remain</li>
+            <li>Refrigerate the dough for at least 30 minutes</li>
+            <li>Shape the cookies to your liking and place them on a parchment paper lined baking sheet. The cookies will not spread much so shape them as you want</li>
+            <li>Refrigerate for an additional 30 minutes</li>
+            <li>Bake at 350F for 10-15 minutes</li>
+            <li>Let cool completely before removing from the sheet and serving</li>
         </ol>
     </div>
 
     <button class="name">Focaccia</button>
     <div class="recipe">
         <ul class="ingredients">
-            <li></li>
+            <li>512g flour</li>
+            <li>10g salt</li>
+            <li>8g active dry yeast</li>
+            <li>455g lukewarm water</li>
+            <li>Olive oil</li>
+            <li>Rosemary (fresh or dried)</li>
         </ul>
         <ol class="instructions">
-            <li></li>
+            <li>Activate the yeast in the warm water. Add some sugar to speed up the process</li>
+            <li>In a large bowl, whisk together the flour and salt</li>
+            <li>Add the water and mix using a rubber spatula until the liquid is absorbed and a sticky dough is formed</li>
+            <li>Rub the surface with oil. This should prevent the dough from drying out</li>
+            <li>Cover the bowl and place in refrigerator to rise for 12 hours, up to 3 days</li>
+            <li>Generously grease square pans (9x13 fits one batch)</li>
+            <li>Deflate the dough until it becomes a ball. Add it to the pan, coat in oil, and let rise for 3-4 hours</li>
+            <li>Preheat the oven to 425F</li>
+            <li>Sprinkle salt, rosemary, and whatever additional toppings. Coat your fingers in oil and make dimples in the foccacia</li>
+            <li>Bake for 25-30 minutes</li>
         </ol>
     </div>
 
     <button class="name">Pasta frolla</button>
     <div class="recipe">
         <ul class="ingredients">
-            <li></li>
+            <li>500g flour</li>
+            <li>250g butter (semi soft)</li>
+            <li>100g sugar</li>
+            <li>2 eggs</li>
+            <li>pinch of salt</li>
+            <li>Vanilla or almond extract (optional)</li>
         </ul>
         <ol class="instructions">
-            <li></li>
+            <li>Combine everything in a food processor with the dough attachment until a dough is formed. Do not overwork it</li>
         </ol>
     </div>
 
     <h2 id="drinks">Drinks</h2>
 
-    <button class="name">The Dream Drink</button>
+    <button class="name matt">The Dream Drink</button>
     <div class="recipe">
         <ul class="ingredients">
             <li></li>
