add script for creating grocery list

--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
 
     <h2 id="drinks">Drinks</h2>
 
-    <button class="name matt">The Dream Drink</button>
+    <!-- <button class="name matt">The Dream Drink</button>
     <div class="recipe">
         <ul class="ingredients">
             <li></li>
@@ -433,7 +433,7 @@
         <ol class="instructions">
             <li></li>
         </ol>
-    </div>
+    </div> -->
 
     <button class="name matt">Matt's Lemonade</button>
     <div class="recipe">
