--- a/glist.html
+++ b/glist.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grocery List</title>
+    <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
-    
+    <ul id="grocery-list"></ul>
+    <form id="grocery-form">
+        <input type="text" id="item-input" placeholder="What do you need?"/>
+        <button type="submit">Add</button>
+    </form>
+    <script src="script.js"></script>
 </body>
 </html>
