--- a/index.html
+++ b/index.html
@@ -215,13 +215,14 @@
         </ol>
     </div>
 
-    <button class="name matt" id="spicyhotpot">Spicy American Hot Pot</button>
+    <div id="spicyhotpot">
+    <button class="name matt">Spicy American Hot Pot</button>
     <div class="recipe">
         <ul class="ingredients">
             <li>20-40 green beans (4 small servings), trimmed and cut</li>
             <li>1 + 1/2 green bell pepper, sliced</li>
             <li>3 white mushrooms, sliced</li>
-            <li>1 Chayotte Squash, cubed</li>
+            <li>3/4 Chayotte squash, cubed</li>
             <li>8oz Beef (ribeye or top/bottom round), thinly sliced</li>
             <li>1/2 Tbsp + a little bit more Chili crisp oil</li>
             <li>1/4 Tbsp garlic, minced</li>
@@ -232,9 +233,38 @@
         </ul>
         <ol class="instructions">
             <li>Make the soup base with the water, garlic, ginger, beef bouillon, and chili crisp oil. Bring to a strong simmer</li>
-            <li>The green beans need to cook for 15 minutes, bell pepper and mushrooms 5 minutes, and chayotte only 2-3 minutes</li>
+            <li>The green beans and bell pepper need to cook for 10 minutes, mushrooms 5 minutes, and chayotte only 2-3 minutes</li>
             <li>Add the beef to the serving bowl. Spoon some of the boiling liquid into the bowl and mix to separate the slices. Then fill the bowl with your serving of soup and vegetables and DO NOT STIR for about 5 minutes. Let the heat cook the beef</li>
         </ol>
+    </div>
+    </div>
+
+    <div id="pineapplechutney">
+    <button class="name matt">Pineapple Chutney Dogs</button>
+    <div class="recipe">
+        <ul class="ingredients">
+            <li>2 cups fresh pineapple, coarsely chopped</li>
+            <li>1/2 cup white onion, coarsely chopped</li>
+            <li>1/4 cup jamaican rum</li>
+            <li>1/4 cup white vinegar</li>
+            <li>1/3 cup honey</li>
+            <li>1 jalapeno, diced</li>
+            <li>2 tsp curry powder</li>
+            <li>1/2 tsp ginger</li>
+            <li>1/2 tsp salt</li>
+            <li>1/8 tsp red pepper flakes</li>
+            <li>Hot dog buns</li>
+            <li>Hot dogs</li>
+        </ul>
+        <ol class="instructions">
+            <li>Cook the rum, vinegar, and onion in a pot</li>
+            <li>Add the seasonings and jalapeno and cook</li>
+            <li>Add pineapple and cook until almost no liquid remains</li>
+            <li>Add honey and cook until almost no liquid remains</li>
+            <li>Cook the hotdogs and lightly toast the buns</li>
+            <li>Top the hot dogs with generous amounts of chutney</li>
+        </ol>
+    </div>
     </div>
 
     <h2 id="sides">Sides</h2>
