--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
         </div>
     </div>
 
-        <button class="name">Spicy Eggs</button>
+    <button class="name">Spicy Eggs</button>
     <div class="recipe">
         <ul class="ingredients">
             <li>2 Tbsp oil</li>
@@ -300,7 +300,8 @@
             <li>1/8 tsp oregano</li>
         </ul>
         <ol class="instructions">
-            <li>Cook oil, shallot, then garlic, then bell pepper, then ketchup, then tomato with spices (except salt)</li>
+            <li>Cook oil, shallot, then garlic, then bell pepper, then ketchup, then tomato with spices (except salt)
+            </li>
             <li>Cook water out to your liking</li>
             <li>Add 4 eggs in holes</li>
             <li>Add salt and cover 15 minutes on simmer</li>
@@ -422,7 +423,23 @@
         </ol>
     </div>
 
-    <h2 id="sides">Sides</h2>
+    <button class="name">Leek Soup</button>
+    <div class="recipe">
+        <ul class="ingredients">
+            <li>2-3 Tbsp olive oil</li>
+            <li>1 leek (trimmed and cleaned)</li>
+            <li>3 red potatoes</li>
+            <li>3 cups water</li>
+            <li>1 tbsp chicken bouillon</li>
+            <li>2 small sprigs of thyme</li>
+            <li>1 bay leaf</li>
+        </ul>
+        <ol>
+            <li>It's a soup</li>
+        </ol>
+    </div>
+
+    <h2 id="sides">Sides and Snacks</h2>
     <button class="name">Beans and bacon</button>
     <div class="recipe">
         <ul class="ingredients">
@@ -498,6 +515,27 @@
         </ol>
     </div>
 
+    <button class="name">Socca</button>
+    <div class="recipe">
+        <ul class="ingredients">
+            <li>1 cup chickpea flour</li>
+            <li>2 cups water</li>
+            <li>1/2 tsp cumin seeds</li>
+            <li>1/2 tsp caraway seeds</li>
+            <li>Lemon peel</li>
+            <li>3 Tbsp olive oil</li>
+            <li>1/4 tsp (heaping) salt</li>
+        </ul>
+        <ol class="instructions">
+            <li>Mix flour and water in a bowl. Skim the bubbles that form from the surface</li>
+            <li>Cover the bowl and let sit for 3 hours</li>
+            <li>Somewhere in those 3 hours, mix and skim a second time, and add the cumin, caraway, and lemon</li>
+            <li>Preheat a cast iron skillet in a 500F oven for a few minutes. Meanwhile, add olive oil and salt to
+                chickpea mix.</li>
+            <li>Pour the mix into the skillet and bake for 40 minutes.</li>
+        </ol>
+    </div>
+
     <h2 id="baking">Baking</h2>
 
     <button class="name">Almond and chocolate ciambella</button>
@@ -556,6 +594,35 @@
             <li>Refrigerate for an additional 30 minutes</li>
             <li>Bake at 350F for 10-15 minutes</li>
             <li>Let cool completely before removing from the sheet and serving</li>
+        </ol>
+    </div>
+
+    <button class="name">Power Biscotti</button>
+    <div class="recipe">
+        <ul class="ingredients">
+            <li>3:1:1:1 ratio</li>
+            <li>80g butter</li>
+            <li>80g sugar</li>
+            <li>120g einkorn flour</li>
+            <li>60g emmer flour</li>
+            <li>60g almond flour (or flour)</li>
+            <li>40g cashew butter</li>
+            <li>40g chocolate chips</li>
+            <li>1 egg</li>
+            <li>1/2 tsp vanilla</li>
+            <li>1/2 tsp banking soda</li>
+            <li>Zest of a small orange (optional)</li>
+        </ul>
+        <ol class="instructions">
+            <li>Cream the butter, sugar, add salt with an electric mixer until soft and fluffy</li>
+            <li>Add the egg and vanilla. Mix until uniform</li>
+            <li>Add the flour, chocolate chips, and baking soda. Mix until a dough is formed and no bits of flour remain
+            </li>
+            <li>Refrigerate the dough for 20-30 minutes</li>
+            <li>Shape the cookies into 1 inch thick logs</li>
+            <li>Refrigerate for an additional 20-30 minutes</li>
+            <li>Bake at 350F for 20-35 minutes</li>
+            <li>Cool completely before cutting and eating</li>
         </ol>
     </div>
 
